--- a/gb/nf3046_2.md
+++ b/gb/nf3046_2.md
@@ -7,6 +7,7 @@
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/11/22/n11673471.md#1" target="_blank">程晓容：国际风云印证《九评》精准论断</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/11/22/n11673471.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911120304312188-150x120.jpg" align ="left"></a>《九评》关乎中国和世界。这部巨著能够帮助人们深入了解中国现当代史及共产主义运动，从而对中共的言行及动机做出清醒的判断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 4:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/11/19/n11666092.md#1" target="_blank">九评15周年 看大陆民众弃中共 句句真情</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/11/19/n11666092.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/a9001d8cd57c0fd94b9b45db8a1c1bc6-600x399-150x120.jpg" align ="left"></a>15年前，大纪元在2004年11月19日发表了《九评共产党》系列社论，使广大民众第一次深刻和全面地了解中共的丑陋历史和邪恶本质，从而走上抛弃中共的自救之路——三退（退出中共党、团、队组织）。如今3亿4千多万的民众声明退出中共的一切组织，走向新生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 9:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/11/19/n11666926.md#1" target="_blank">《九评》发表15周年 加拿大各界华人在觉醒</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/11/19/n11666926.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/04-1-1-150x120.jpg" align ="left"></a>2004年11月19日，《大纪元时报》系列社论《九评共产党》（简称《九评》）横空出世，被世人喻为旷世奇书，并打出“天灭中共”的震世警言，引发了持续15年的“三退”（退共产党、退共青团、退少先队）大潮。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 4:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/10/n11712332.md#1" target="_blank">每日三退声明精选（2019/12/09）</a><br></h3>我是建筑商，今年承包了一个政府工程，在外县施工。在承揽工程及施工过程中亲身体会中共的腐败。管工程的要钱，管品质的勒索，管安全的勒索。。。怎么反腐都照贪不误。真是百炼成贪的邪教。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 11:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/9/n11709631.md#1" target="_blank">每日三退声明精选（2019/12/08）</a><br></h3>我是一名员警家属，知道我们那里有炼法轮功的被残酷迫害，今听到真相，我决定退出中共邪党的少先队组织，并且要给丈夫讲清真相，不让他参与迫害好人，选择美好未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/8/n11707874.md#1" target="_blank">每日三退声明精选（2019/12/07）</a><br></h3>我“六四”时就想退出共产党，当时把党委的领导吓得够呛，硬劝结果没退成。因为家庭背景是高干，我对共产党看得很透了，也看了“九评共产党”。现在我声明退出入过的党团队一切共产党的组织，与邪恶彻底决裂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 10:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/7/n11706777.md#1" target="_blank">每日三退声明精选（2019/12/06）</a><br></h3>我是一位居住于四川的农民，曾经经历过土改，大跃进，等疯狂的红色运动，曾经被打为地富反坏右，被多人围殴，游街示众，后来虽然进行了平反，但多年内心一直过不了这个坎，总觉得又气又怕。今年是个多事之年，大事件的接连发生表明共产党体制的摇摇欲坠，希望在我有生之年能看见邪党倒台，感谢大纪元给了我一个吐露自己心声的机会，我在这里自愿宣布退出中国共产党的一切组织机构，三退保.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:53 PM							</td></tr>
@@ -43,6 +44,5 @@
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/11/14/n11654455.md#1" target="_blank">每日三退声明精选（2019/11/13）</a><br></h3>被中共长期欺骗、高压管控的国民，从未真正地拥有过面包和自由。吃一口饭却要交半口税，透支几代人的积蓄才买得起的房产，70年后却很可能成为中共“国有”。好不容易成了富豪，也得向中共俯首称臣，接受其管控。德利看透了邪党的流氓邪教本质，在此宣誓退出邪党的共青团和少先队组织不给邪党陪葬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 10:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/11/13/n11652084.md#1" target="_blank">每日三退声明精选（2019/11/12）</a><br></h3>郑重声明：从今日起退出曾经在中共加入过的少先队和共青团组织，了解到中共邪党腐败透顶，欺压百姓，香港事件更暴露其残暴嘴脸，自愿退出邪党的所有组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 12:26 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/11/12/n11649670.md#1" target="_blank">每日三退声明精选（2019/11/11）</a><br></h3>我们知道了必须退队的原因，最近香港被大陆(中共)害的好惨，我老公是逃港人员，我每天祈祷老天保佑香港。感谢法轮功讲真话，法轮大法好！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 12:18 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/11/11/n11646787.md#1" target="_blank">每日三退声明精选（2019/11/10）</a><br></h3>我过去被中共欺骗，蒙骗过。但是我不光光看到他们虚伪的嘴脸，而且也看到了后来他们企图消灭人类自由的邪恶计划，尤其是中共前宗教局局长的事情让我更加对他们感到厌恶和气愤。我也回想了自己以前被中共洗脑的东西，其实感觉得到自己是被强迫的，自己心里也不认同这些东西。我是相信基督的，我决定在这里公开退出共产党、退出共青团和退出少先队，永远抛弃共产邪说，摆脱邪灵。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月11日 11:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/nf3046.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nf3046_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/aiaxj298/djy/blob/master/gb/nf3046_2.md#1<br><a href="https://github.com/aiaxj298/djy/blob/master/gb/nf3046_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/aiaxj298/djy/blob/master/gb/nf3046_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_2.htm">http://www.epochtimes.com/gb/nf3046_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
