--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -1,11 +1,13 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/aiaxj298/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aiaxj298/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793176.md#1" target="_blank">【才子佳人】才貌双全的施良娣为何下嫁黔娄</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793176.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/getCollectionImage-320x200.jpg" align ="left"></a>黔娄，鲁国人，战国时齐国的贤士、隐士和道学家。他出身贫寒，从小饱读诗书，励志苦节。施良娣是鲁国世袭太祝的女儿，当时太祝为帝王家掌握鬼神的祭祀之礼，非常受人敬重。出身贵族世家的施良娣不仅知书达礼，而且容貌美丽，她看重黔娄的德才，甘愿放弃荣华，嫁给了家徒四壁的黔娄。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 10:23 PM	</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/6/7/29/n1403167.md#1" target="_blank">化腐朽为神奇——米开兰基罗的《大卫像》</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/6/7/29/n1403167.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/07/david-2147606_1920-320x200.jpg" align ="left"></a>五百年来《大卫像》的精巧匀称、优雅的相貌、从容的意态和蓄势待发的气势，在在都令人赞赏。正如米开兰基罗自己所言，他的雕刻就是“将禁锢在石头中的生命解放出来”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 5:00 PM	</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/15/3/1/n4376992.md#1" target="_blank">古人记录的天界和人间</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/15/3/1/n4376992.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/03/1502131351222483-150x120.jpg" align ="left"></a>古人曾录过一些天界的事情与人类的关系。在《列子．汤问》中有一段纪录............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 5:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/12/n11787328.md#1" target="_blank">天地清明引(172) 东流水－逝水东流3</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/12/n11787328.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/12/00645LlLty7211TT1uv3f690-150x120.jpg" align ="left"></a>重阳佳节，王庭设宴，席间清冷，百官莫敢言声，不知谁人下个就死。夜风入庭，人人噤若寒蝉，唯皇甫一人，言笑晏晏，举杯豪饮，胸怀畅然。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803177.md#1" target="_blank">纪实散文：一夜惊梦（19）</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803177.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1907161621212483-2-150x120.jpg" align ="left"></a>王建中落户旧金山
 
 王建中甫出监牢，生计艰难，很快寻至山中。老T自无二话，慨然伸手相助。王建中的作品书中有画，自成一体，我也曾见过两幅。《泰山日出》写得山川纵横，苍翠欲滴。《黄河》两字，则波涛汹涌，仿佛马上要从纸面呼啸而出，溅人一头一身，的确有些逼人的气势。
 
 老T一向仗义，人面颇广，在当地商圈大力推介：“我这.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 12:43 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793176.md#1" target="_blank">【才子佳人】才貌双全的施良娣为何下嫁黔娄</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793176.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/getCollectionImage-150x120.jpg" align ="left"></a>黔娄，鲁国人，战国时齐国的贤士、隐士和道学家。他出身贫寒，从小饱读诗书，励志苦节。施良娣是鲁国世袭太祝的女儿，当时太祝为帝王家掌握鬼神的祭祀之礼，非常受人敬重。出身贵族世家的施良娣不仅知书达礼，而且容貌美丽，她看重黔娄的德才，甘愿放弃荣华，嫁给了家徒四壁的黔娄。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 10:23 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/15/1/7/n4336465.md#1" target="_blank">一番风来一种花开 最寒冷时节花信风应期而至</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/15/1/7/n4336465.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/02/PK2A003330N000000002PAA-150x120.jpg" align ="left"></a>华夏民族是个喜花、爱花的民族。“华”者花也。华夏祖先除了制定了二十四节气之外，还发展了二十四番花信风，即应花期而来的风。根据黄历，从小寒到谷雨，共八个节气，一百二十日。每个节气十五天，一个节气又分三候侯，每五天为一侯，八气共二十四侯，每侯应一种花，共有二十四种花。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 5:47 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11778584.md#1" target="_blank">【命理】天灾注死天有定 古北京大地震幼儿见证</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11778584.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/57f4f3b31a8fc872237eeef7e15ff026-150x120.jpg" align ="left"></a>雍正朝的庚戌年，北京发生了一场大地震，有一三、四岁的幼儿事先见到注定将死于地震的人身上带着锁链，这是怎样回事呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 9:32 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/12/n11787292.md#1" target="_blank">天地清明引(171) 东流水－逝水东流2</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/12/n11787292.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/12/00645LlLty7211TT1uv3f690-150x120.jpg" align ="left"></a>话说玉林背负纳兰尸身，逃出城外，疾走十里。一路狂奔，气力将近，步履不稳，脚腕一痛，跪地林间，纳兰尸身落于地上。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 8:00 AM			</td></tr>
@@ -28,7 +30,6 @@
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/8/n11776367.md#1" target="_blank">“贤”的简化汉字 暗藏什么可怕后果？</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/8/n11776367.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/eeaa4f95cbdb623e11ab65a1a3cc0012-150x120.png" align ="left"></a>中共以变异了的简体字，改造使用者的道德观念与人生价值，“妖魔化”人心！让我们从神传文字来还原“圣贤本色”，识破中共的简体字如何“妖魔化”人心的企图和它最终的目的。本文来说“贤”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 8:28 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11794104.md#1" target="_blank">书摘：《巴洛克艺术第一人──卡拉瓦乔》</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11794104.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1-1-1-150x120.jpg" align ="left"></a>在黑死病蔓延意大利之际，黑衣骑士遇上了那道艺术之光，漆黑的世纪因此明亮起来……他不知道的是，从那往后，他的一生将在光明与黑暗的激烈搏斗中度过，他无从逃避。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 5:02 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/10/n11781986.md#1" target="_blank">天地清明引(169) 东流水－各方摊牌5</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/10/n11781986.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/8f686ba2bd0c3593a6afd717e72fa4c3-150x120.png" align ="left"></a>纳兰庭芳自领神机营骑兵，冲入战团，为义军开出一条血路。但见叛军之中一人，发髻散乱，正是昭雪，登时一愣，避开视线，对上永延双眼：“王爷，当真冲冠一发为红颜，世袭爵位、同袍兄弟，都可不要？！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11795801.md#1" target="_blank">思辨式写作：科技冷漠（下）</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11795801.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_99743754_Subscription_L_1@1200x1200-150x120.jpg" align ="left"></a>“网路”是种工具媒介，以此作为平台、纽带，连结形形色色的人际关系。作为“使用者”的我们，有权决定“接收”和“发送”的参与比例。也就是说，我们不只是“被”网路影响的一方，也是参与、影响他人的关键力量。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 1:26 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801523.md#1" target="_blank">谈皇帝与土匪的根本差别</a><br></h3>在近百年中西文化的交往中，由于双方深刻的习俗差异，有些西方人，尤其美国人对于中国共产党却比较同情和容忍；同时对于其鼓吹的无神论却必然蜕变为伪神论的倾向常常视而不见。因为现代西方国家也盛行科学至上，理性至上，以及由此产生的无神论思潮蔓延；这些思潮与前者并没有根本的区别和界限。而且在开始中共总是笑脸相迎，说在中国的投资有利.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 4:29 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801214.md#1" target="_blank">一七令．红楼梦</a><br></h3> 春。 五彩，霞云。 甄士隐，贾雨村。 红楼梦境，石头记存。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 12:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11795826.md#1" target="_blank">七绝：有感</a><br></h3>山水琴觞怆泣诗， 摧心慨叹为相知。 会当了悟因缘事， 天宇澄明梦尽时。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 12:17 AM			</td></tr>
@@ -40,6 +41,5 @@
 有白鹭鸶在田里翘脚
 有稻田在快乐歌唱
 ............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 1:44 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11795825.md#1" target="_blank">五律：途中</a><br></h3> 去去重峦外，行行弯复弯。 清心山上雨，写意雨中山。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 12:27 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/aiaxj298/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/aiaxj298/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007.htm">http://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
