--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801219.md#1">大陆多座城市医院启动一级防护 传医护中招</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/13/n11791100.md#1">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a><br>
 <br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805446.md#1">陈思敏：民政部“中福在线”的丑闻与骗局</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805438.md#1">袁斌：红三代露小宝与贫困女吴花燕的迥异人生</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11804320.md#1">项云：中共流氓化政治和经济外强中干濒临灭亡</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11804084.md#1">隋志：栽赃自焚案 中共害全国</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802277.md#1">阅明：香港真相揭画皮 三退大潮顺天意</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/19/11/4/n11631494.md#1">【思想领袖】金里奇：美国曾误判中共这个最大威胁</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11801869.md#1">吴惠林：导读 从历史学习，“天堂”操之在己</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11801852.md#1">骆克仁:《协议》签订后的“小道消息”</a><br>
 <br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 350,133,002 人
+- 共 350,134,194 人
 ```
 </strong>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
