--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -7,7 +7,7 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798622.md#1">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/12/n11788541.md#1">中共官员变换护照身份 逃避人权法案制裁</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801219.md#1">大陆多座城市医院启动一级防护 传医护中招</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/13/n11791100.md#1">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a><br>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801004.md#1">习议“领导更替” 美媒：北京陷接班人怪圈</a><br>
 <br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805446.md#1">陈思敏：民政部“中福在线”的丑闻与骗局</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805438.md#1">袁斌：红三代露小宝与贫困女吴花燕的迥异人生</a><br>
