--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -31,7 +31,7 @@
 <br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805440.md#1">故宫奔驰女被爆：戴千万名表 住北京豪宅</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805294.md#1">央视文件爆光 抢占国际舆论阵地 加大洗脑</a><br>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805294.md#1">央视文件曝光 抢占国际舆论阵地 加大洗脑</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805171.md#1">全球逾20城撑港“天下制裁”集会</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805257.md#1">传广州医护人员染肺炎 院方否认后又删帖文</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11804931.md#1">港天下制裁集会再遭腰斩 防暴警指骂市民</a><br>
