--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -33,7 +33,16 @@
 蓄意蛊惑人心，宣传极度虚伪，
 特权滋生贪腐，官场集体犯罪。
 非但危害国内，且又遗患域外。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 11:51 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793432.md#1" target="_blank">周晓辉：班农证川普弃绥靖政策 中共去日无多</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793432.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1198512650-600x400-1-150x120.jpg" align ="left"></a>无论是哪种方式，中共的结局只有一个，那就是解体，而且这个过程不会拖的很长。很明显，美国川普政府是不准备缺席这个过程的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 5:45 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800010.md#1" target="_blank">陈达：马屁似拍颠覆声</a><br></h3>人民领袖刚加封，
+贵族气质又赞颂。
+高级黑搭低级哄，
+牢记初心耳旁风。
+资本家已能入党，
+奴隶主咋就不成？
+全球再添茶余乐，
+马屁疑拍颠覆声。
+不晓初心灭贵族？
+还是捧刀欲见红？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 2:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798907.md#1" target="_blank">王赫：2019中共政局 赶制家法 内斗诡异</a><br></h3>2019，中共是火上烤的一年，被烤得神志不清、惊慌失措、奄奄一息，政局全面恶化：草木皆兵，“向左转”浊浪拍岸，社会控制极端化；当局左支右绌，进退失措，几近丧失决策能力；强化“党领导一切”，刀光剑影之间，内斗呈现新态势，已末路不远。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 3:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798400.md#1" target="_blank">中华民国台湾 ：民主进程看过来</a><br></h3>2020年元月11日，蔡英文连选连任，当选中华民国台湾第十五任总统。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 10:44 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11797687.md#1" target="_blank">金浴凤：春之歌</a><br></h3>蟾害未完了，处处有虎啸；
