--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,10 +30,11 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805538.md#1">中共最新人口数据 出生、死亡人数都受质疑</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805579.md#1">武汉肺炎新增1死 确诊136例 北京深圳首现病例</a><br>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805538.md#1">中共最新人口数据 出生、死亡人数都受质疑</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805609.md#1">完成紧急逃生测试 SpaceX太空船最快3月载人</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805440.md#1">故宫奔驰女被爆：戴千万名表 住北京豪宅</a><br>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805550.md#1">多伦多法轮功学员给李洪志先生拜年</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805294.md#1">央视文件曝光 抢占国际舆论阵地 加大洗脑</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805171.md#1">全球逾20城撑港“天下制裁”集会</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805257.md#1">传广州医护人员染肺炎 院方否认后又删帖文</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11803938.md#1">【翻墙必看】红三代轧故宫 官媒提三大疑问</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11804085.md#1">【更新】15万港人1.19集会 警再抓人</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801551.md#1">【直播回放】纽约港人集会游行吁制裁中共</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11804587.md#1">香港再增11宗疑似武汉肺炎病例 最小3岁</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805481.md#1">新疆喀什发生规模6.4地震  余震不断</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11805332.md#1">大陆“东阿阿胶”24年首亏 预亏超3亿</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11804943.md#1">周庭被禁离港 通过skype在日本大学露面</a><br>
