--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -29,9 +29,9 @@
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/18/n11802910.md#1" target="_blank">贵州化工厂燃爆 天空被映红 居民急撤离</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/18/n11802910.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Untitled-7-150x120.jpg" align ="left"></a>1月17日，贵州福泉一化工厂发生爆燃。大团火焰升腾而起，大片天空被映红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 8:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/18/n11802498.md#1" target="_blank">湖南数十公民过年聚餐 多人遭当局禁止参加</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/18/n11802498.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/EOe53J9UUAA4iX9-150x120.jpg" align ="left"></a>1月17日，湖南株州市数十名公民相约于过年前聚会，但多人遭到当局警告禁止参会，连聚会餐厅也被迫害取消了预订好了的宴席。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 7:09 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/18/n11802037.md#1" target="_blank">中共监控学校 数千学生人脸识别数据遭泄漏</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/18/n11802037.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/69ca86adf17851d1cf9bb617bdd28617-150x120.jpeg" align ="left"></a>一名研究人员发现，一个包括数千名儿童信息的中国人脸识别数据库存储在互联网上，却没有任何保护措施。这个消息再次引发有关中共学校监控和网络安全的问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 5:02 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/19/n11803788.md#1" target="_blank">中共军委政法委书记换人</a><br></h3>中共中央军委政法委书记换人，原军委政法委副书记王仁华接替宋丹，出任军委政法委书记。宋丹已年满63岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 12:26 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/19/n11803815.md#1" target="_blank">每日三退声明精选（2020/01/18）</a><br></h3>一时无知，被这个党的假像蒙蔽，从此误入尘网中，一去二十年。如今，对这个党的无耻行径心知肚明，但无奈肉身在墙内，只好借贵宝地表达一份决定，与这个党离心离德，分道扬镳。本人（化名断流）声明退出此党，从此清白干净做人，不愿同流合污。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 10:57 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/18/n11802364.md#1" target="_blank">大陆收费公路欠债达5.7万亿</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/18/n11802364.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/1024px-Looking_south_bound_down_the_Tullamarine_Freeway_at_Airport_West-150x120.jpg" align ="left"></a>中国拥有世界上最多的收费公路，但所收费用低不上花费速度，数据显示，大陆收费公路所欠债务已达5.7万亿人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 3:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/18/n11802724.md#1" target="_blank">业绩预告频爆雷 大陆数家公司共亏损70亿</a><br></h3>大陆上市公司陆续公布年度业绩报告。1月17日晚间，科大智能、ST柳化等数家上市公司曝出业绩大雷，亏损金额合计已超过70亿元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 6:33 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/18/n11802036.md#1" target="_blank">【翻墙必看】接班人问题是中共权力更替的死穴</a><br></h3>近期中共党媒透露，习近平讲话谈到“国家领导层更替”问题。纽约时报发表文章说，中共党内斗争极其残酷无情，特别是权力更替期，毛最终败于他一手制造出来的接班人困局，现任中共领导人能规避毛那样的结局吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 5:42 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/18/n11802417.md#1" target="_blank">武汉新增4起新型肺炎病例 全数转院隔离</a><br></h3>目前，武汉新型冠状病毒感染的肺炎病例新增加4例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 3:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mthry289/djy/blob/master/gb/nsc413_2.md#1<br><a href="https://github.com/mthry289/djy/blob/master/gb/nsc413_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mthry289/djy/blob/master/gb/nsc413_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_2.htm">http://www.epochtimes.com/gb/nsc413_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
