--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/mthry289/djy/blob/master/gb/20/1/13/n11791100.md#1">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a><br>
 <a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11793980.md#1">【唐靖远快评】武统台湾？中共恐有心无力</a><br>
 <br><p><a href="https://github.com/mthry289/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/mthry289/djy/blob/master/gb/20/1/20/n11806236.md#1">丁咚：庚子年不凡气息扑面来</a><br>
 <a href="https://github.com/mthry289/djy/blob/master/gb/20/1/19/n11805764.md#1">诸葛次郎：为庚子年的香港祈祷</a><br>
 <a href="https://github.com/mthry289/djy/blob/master/gb/20/1/19/n11805741.md#1">谭笑飞：中美协议加速中共解体</a><br>
 <a href="https://github.com/mthry289/djy/blob/master/gb/20/1/19/n11805446.md#1">陈思敏：民政部“中福在线”的丑闻与骗局</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/mthry289/djy/blob/master/gb/20/1/18/n11803290.md#1">大成漫画：开口吓傻邪党官</a><br>
 <a href="https://github.com/mthry289/djy/blob/master/gb/20/1/18/n11802918.md#1">张林：中共魔手把慈善机构变成诈骗团伙</a><br>
 <a href="https://github.com/mthry289/djy/blob/master/gb/20/1/18/n11802382.md#1">王友群：林郑月娥可知你“错”在哪？</a><br>
-<a href="https://github.com/mthry289/djy/blob/master/gb/20/1/18/n11802277.md#1">阅明：香港真相揭画皮 三退大潮顺天意</a><br>
 <br><p><a href="https://github.com/mthry289/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/mthry289/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/mthry289/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
