--- a/gb/ncid282_3.md
+++ b/gb/ncid282_3.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/8/n11778073.md#1" target="_blank">自曝为何生二胎不经老大同意 张歆艺逗乐网友</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/8/n11778073.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/yuanhong-zhangyunyi-_meitu_1-150x120.jpg" align ="left"></a>个性幽默的大陆女星张歆艺，与演员袁弘结婚后育有十个大的儿子“四坨”。今年38岁的她，近日在综艺节目中自曝想生二胎。而当被主持人问及是否要征得老大同意时，她毅然回答“不会”。个中原因，笑翻网友。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 9:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/8/n11777207.md#1" target="_blank">好心的巴黎人 专访法国国际经济专家沃尔特</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/8/n11777207.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/07-20200107-150x120.jpg" align ="left"></a>弗朗西斯·沃尔特（Francis Walter）住在巴黎三区，他家附近是华人集中的餐饮和商业区，他总喜欢到位于市长路（Rue au Maire）西端的温州小吃店用餐，称其为自己的“饭堂”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 8:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/8/n11777892.md#1" target="_blank">乌航空难?坠机原因和客机安全探析</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/8/n11777892.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/22447636-150x120.jpg" align ="left"></a>飞机雷达数据显示，飞机起飞后，正常起空攀升2分钟后，突然停止传输数据。美国航空专家科克斯（John Cox）说，这显示发动机电源可能被什么东西中断，一般这种情况下，备用电机会接着供电，但乌航事件中，备用电机似乎没发挥作用，这种情况很少见。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 6:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/8/n11777875.md#1" target="_blank">加拿大华裔富豪遭分尸 华人圈问题曝光</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/8/n11777875.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/e45e81a1-8d5f-4067-bae6-f4a8a28e7942-150x120.jpeg" align ="left"></a>加拿大温哥华华裔富豪苑刚被表姐夫赵利杀害并分尸，1月7日加拿大卑诗省法院宣判赵利误杀罪成。此案不只是家庭暴力，还涉及炫富、情色等糜烂的中国移民生活，令人瞠目结舌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 5:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/13/n11789372.md#1" target="_blank">每日三退声明精选（2020/01/11）</a><br></h3>本人是来自北京的赵祁疆。在中学时代，因为受到了中共邪党的蛊惑，我成为了加入邪党先锋队青年团的积极分子。中学期间，我的母亲曾经因为记录中共对退伍军人杀鸡取卵，兔死狗烹的残暴行为而被中共官员截查并强制删除手机内容。在移民加拿大以后，我了解了中共邪党欺人瞒世、草芥人命的邪恶行径。在大学攻读经济学和社会学期间，通过教授的谆谆善诱和不懈帮助，我终于了解了中共邪党的本质.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 12:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/10/n11783219.md#1" target="_blank">13年从未放弃 电影《亲爱的》原型仍在寻子</a><br></h3>2007年10月9日，是包子铺小老板孙海洋到深圳城中村卖包子的第七天。这一天，他5岁的儿子孙卓，在他太累打个盹时被拐走。如今，13年过去，虽然他的真实故事被改编成电影《亲爱的》，但幸运之神尚未敲响他的家门，他仍在艰难寻子。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 7:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/10/n11781995.md#1" target="_blank">400公里1312元 大陆高速收天价过路费</a><br></h3>1月2日，大陆客车司机胡某开车从山西高速路驶过，但被梁山县收费站收取1312元过路费。事后，他在网络上曝光此事，山西交通控股集团有限公司才退还多收的1100元通行费。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 8:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/10/n11781586.md#1" target="_blank">操场埋尸案二审维持原判 杜少平仍判死刑</a><br></h3>1月10日，湖南新晃县一中操场埋尸案进行二审，驳回被告人杜少平等人的上诉，杜少平依旧被判死刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 2:32 PM							</td></tr>
