--- a/gb/news2007_2.md
+++ b/gb/news2007_2.md
@@ -1,4 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mthry289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mthry289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mthry289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mthry289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mthry289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mthry289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mthry289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mthry289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/mthry289/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mthry289/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/8/n11776367.md#1" target="_blank">“贤”的简化汉字 暗藏什么可怕后果？</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/8/n11776367.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/eeaa4f95cbdb623e11ab65a1a3cc0012-150x120.png" align ="left"></a>中共以变异了的简体字，改造使用者的道德观念与人生价值，“妖魔化”人心！让我们从神传文字来还原“圣贤本色”，识破中共的简体字如何“妖魔化”人心的企图和它最终的目的。本文来说“贤”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 8:28 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11794104.md#1" target="_blank">书摘：《巴洛克艺术第一人──卡拉瓦乔》</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11794104.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1-1-1-150x120.jpg" align ="left"></a>在黑死病蔓延意大利之际，黑衣骑士遇上了那道艺术之光，漆黑的世纪因此明亮起来……他不知道的是，从那往后，他的一生将在光明与黑暗的激烈搏斗中度过，他无从逃避。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 5:02 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/10/n11781986.md#1" target="_blank">天地清明引(169) 东流水－各方摊牌5</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/10/n11781986.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/8f686ba2bd0c3593a6afd717e72fa4c3-150x120.png" align ="left"></a>纳兰庭芳自领神机营骑兵，冲入战团，为义军开出一条血路。但见叛军之中一人，发髻散乱，正是昭雪，登时一愣，避开视线，对上永延双眼：“王爷，当真冲冠一发为红颜，世袭爵位、同袍兄弟，都可不要？！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11795801.md#1" target="_blank">思辨式写作：科技冷漠（下）</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11795801.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_99743754_Subscription_L_1@1200x1200-150x120.jpg" align ="left"></a>“网路”是种工具媒介，以此作为平台、纽带，连结形形色色的人际关系。作为“使用者”的我们，有权决定“接收”和“发送”的参与比例。也就是说，我们不只是“被”网路影响的一方，也是参与、影响他人的关键力量。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 1:26 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11795844.md#1" target="_blank">麦立：忘忧森林一隅</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11795844.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/mily-0116-150x120.jpg" align ="left"></a> 我们 曾 一起努力长大 曾 一起迎接风雨 也曾   一起 与风共舞 沙沙共语......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 12:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/12/23/n11740761.md#1" target="_blank">“轮回之说”何处来？古老中国的轮回观</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/12/23/n11740761.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1901111221442483-150x120.jpg" align ="left"></a>茫茫宇宙，浩瀚无际。六合之中，奇闻异事之多，也难以记述。单就生命的轮回话题，从古至今探索不尽。日有东升西落，四季有轮回交替，十二时辰循环相继，就包括人的生命从生老病死，再到生老病死，从古至今，延续不断，繁衍不息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 2:30 PM			</td></tr>
@@ -23,10 +26,10 @@
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/13/n11790521.md#1" target="_blank">许其正：海鸥三唱</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/13/n11790521.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/01/1301072206451758-150x120.jpg" align ="left"></a>海鸥，飞翔，在穹苍，在海的上方。  看！它和群鸥一样，平举着双翅，以一个极优美的姿势，在滑翔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/13/n11790815.md#1" target="_blank">青松絮语：大房子</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/13/n11790815.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/green-house-pixabay-150x120.jpg" align ="left"></a>在一个人人都在追逐大房子、更大房子的时代，房子到底多大才够住，成了一个我们人人都该沉下心反思的哲学问题……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 11:25 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/8/n11775923.md#1" target="_blank">织布师智斗狂妄无知的国王</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/8/n11775923.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1d014ccbd8222a11b76e8c981203b473-150x120.jpg" align ="left"></a>有个狂妄无知的国王，老是不满足，特别是对自己穿的衣裳很在意，下令所有技艺超群的织工，来为他赶织纤细美丽的新布作衣裳。一个聪明的老织工怎样得到挑剔的国王的赞赏呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 5:47 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/11/n11784288.md#1" target="_blank">香港，可饮一杯无？</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/11/n11784288.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_118310902-150x120.jpg" align ="left"></a>异地相聚的我们不再年轻，昔时的意气风发，如今的沉静沧桑，现在遇到我的人，恐怕不曾想过我也曾经年轻，就像断开了的七彩拐杖糖，拿到红色那一截的以为是樱桃口味，黄色那一截的以为是柠檬口味，却不知道糖在不同的段落有不同的味道，而我的年轻岁月留在了台湾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 12:19 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/9/16/n11524096.md#1" target="_blank">【医案】相濡以沫</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/9/16/n11524096.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/190812025028100093-150x120.jpg" align ="left"></a>一位52岁美丽的裁缝师，当医生宣告她得乳癌的刹那，从手术到化疗，裁缝师咬紧牙根，没有掉过一滴泪。半年后，有一天来诊，裁缝师紧张又惶恐的，一坐下来就说：“医生，赶快救我，我快受不了，快爆掉了！”急促的声音刚落下，随即眼泪狂流。原来她刚陪先生去做检查，医生说先生得的是胃癌，真是祸不单行，屋漏偏逢连夜雨！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 10:28 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/10/n11781782.md#1" target="_blank">天地清明引(166) 东流水－各方摊牌2</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/10/n11781782.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/8f686ba2bd0c3593a6afd717e72fa4c3-150x120.png" align ="left"></a>清晨，昭雪甫醒，心下大惊：“昨日纳兰审问名册之事……”即刻令红缨更衣，回转花园。秋菊清芳依旧，露珠点点，不改高洁。昭雪双手抚着，一朵一朵翻找，却是一无所获，登时坐于石凳之上，不知所措。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/12/n11788040.md#1" target="_blank">五律：朝霞</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/12/n11788040.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/10/100421092855100093_1-150x120.jpg" align ="left"></a> 朝霞凌夜出，烟景射金红。 云海横空壮，天光拔地雄。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 3:50 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11795975.md#1" target="_blank">童诗：坐高铁真有趣</a><br></h3>高铁窗外的风光
+有白鹭鸶在田里翘脚
+有稻田在快乐歌唱
+............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 1:44 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11795825.md#1" target="_blank">五律：途中</a><br></h3> 去去重峦外，行行弯复弯。 清心山上雨，写意雨中山。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 12:27 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11795812.md#1" target="_blank">五律：琴</a><br></h3>大雅从天下，逸情挥古今。 高山听独啸，流水作长吟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 12:20 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11795811.md#1" target="_blank">神韵行（三十）</a><br></h3>妙乐传，缃绫绚，
